--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-activitylog": "^4.10",
         "symfony/mailer": "^7.2"
     },
     "require-dev": {
